--- a/CSS/indexStyle.css
+++ b/CSS/indexStyle.css
@@ -28,6 +28,49 @@ ul{
   background-color: rgb(0, 0,0, .5);
   overflow: hidden;
 }
+/* start loading screen */
+.loading{
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  background-color: rgb(35, 18, 41);
+}
+.loaders{
+  width: 100px;
+  height: 46px;
+  position: relative;
+  border-bottom: 5px solid #FFF;
+  border-top: 5px solid #FFF;
+  box-sizing: border-box;
+}
+.loaders:before , .loaders:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -20px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #cc00ff;
+  border: 5px solid #FFF;
+  box-sizing: border-box;
+  animation: slide 1s infinite ease-in-out alternate;
+
+}
+.loaders:after {
+  top: 20px;
+  animation-direction: alternate-reverse;
+}
+@keyframes slide {
+  0% , 20% {  transform: translateX(70px)  }
+  80% , 100% { transform: translateX(-1px) }
+}
+
+/* end loading screen */
 
 /* header section */
 
@@ -131,7 +174,7 @@ ul{
   height: 10px;
   
 }
-.loader {
+.header-content .loader {
   margin-left: 270px;
   margin-top: 40px;
   display: block;
@@ -143,7 +186,7 @@ ul{
   border-radius: 50% 50% 50% 50% / 25% 25% 25% 25%;
 }
 
-.loader::before {
+.header-content .loader::before {
   content: '';
   position: absolute;
   left: 50%;
