--- a/CSS/indexStyle.css
+++ b/CSS/indexStyle.css
@@ -7,14 +7,14 @@
     clear:both;
     height: 20px;
 }
-.container{
-    margin: auto;
-    width: 80%;
-} 
+
 h1,h2,h3,h4,h5,h6{
     font-family: "Work Sans";
     font-weight: 600;
 
+}
+a{
+  text-decoration: none;
 }
 p{
     font-family: 'Open Sans',arial;
@@ -27,6 +27,7 @@ ul{
 .overlay{
   background-color: rgb(0, 0,0, .5);
   overflow: hidden;
+  height:100%;
 }
 /* start loading screen */
 .loading{
@@ -84,69 +85,53 @@ ul{
 } 
 .header a{
     text-decoration: none;
-    display: inline-block;
     font-weight: 900;
     border-radius: 10px;
     border: none;
     }
-.logo{
-    float: left;
-}
-.logo img{
-    width: 180px;  
-}
-
-.navbar{
-    width: 100%;
-    padding: 20px;
-    text-align: center;
-    position: fixed;
-    height: 1%;
-    padding-top: 30px;
-    padding-bottom: 50px;
-    transition: 1s;
-}
-.links{
- float: right;
- margin-top: 10px;
-
-}
-.links li{
-  float: left; 
-  margin-left: 20px;
+.header #change{
+   margin-bottom: -30px;
+    }
+    .navbar {
+      transition: 1s;
+    }
+.navbar li a{
   font-family: 'Open Sans',arial;
-  font-weight:lighter
+  font-weight:lighter;
+  cursor: pointer;
+  color: white;
+   font-weight: 100;
+   font-size: 16;
 
 }
-.links li a.active{
-    color: rgb(255, 255, 255);
-}
-.links li a{
-   color: white;
-    font-weight: 100;
-    font-size: 16;
-}
-.links li a:hover{
+.navbar li a:hover{
     color: #b5e0e0;
     transition-duration: 1s;
-
+}
+.navbar .navbar-toggler{
+    background: none;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPLcIsDa5qQcHgZhC0mRo1bH8rj1pJiwiIcjT_OgSbY3aZSWiDZKl8BKQVxJoEd671VvM&usqp=CAU);
 }
 .header-content{
+  position: relative;
     text-align: center;
     color: #ffff;
     font-weight:lighter;
-    width: 100%;
-    height: 100%;
-
+    height:100vh;
 }
 .header-content .container{
-  width: 40%;
-  margin-top: 15%;
+  padding-top: 80px;
 }
+
 .header-content p{
     margin-top: 20px;
     font-size: 22px;
-    
+    width: 50%;
+}
+.header-content content{
+    padding-bottom: 180px;
+    padding-top: -180px;
+
 }
 
 .header-content h1{
@@ -171,11 +156,10 @@ ul{
   border: #f8f8f8 solid 1px;
   background-color: none;
   border-radius:  2px;
-  height: 10px;
+  height: 5px;
   
 }
 .header-content .loader {
-  margin-left: 270px;
   margin-top: 40px;
   display: block;
   width: 38px;
@@ -218,15 +202,10 @@ ul{
     padding-left: 53.4px;
     padding-right: 53.6px;
     height: 40%;
-    padding: 50px;
-    margin-bottom: 50px;
 }
 .review div{
    text-align: center;
-   width: 20%;
    margin-top: 20px;
-   display: inline-block;
-   margin-left: 50px;
   }
 .review i{
     background-color: #ce5c9f;
@@ -275,9 +254,7 @@ ul{
   }
 
   .aboutimg{
-    width: 50%;
-    float: left;
-    
+    width: 50%;    
   }
   .details{
     width: 90%;
@@ -291,26 +268,24 @@ ul{
    width: 90%;
 
   }
-  .img{
+  /* .img{
     width: 50%;
-    float:right;
-  }
+  } */
   .img img{
-    width: 95%;
+    width: 85%;
     
   }
   /* special-about-us section*/
   .special-about-us{
     background-image: url(../image/specialAboutBackground.jpg);
-    height: 80%;
+    height: 90%;
     background-size: cover;
     opacity:2;
     color: #ffff;
   }
   .special-about-us .special{
-     height: 30%;
      text-align: center;
-     padding-top: 80px;
+     padding-top: 70px;
   }
   .special-about-us h3{
    margin-top: 15px;
@@ -323,30 +298,25 @@ ul{
   }
   .special-about-us h5{
    font-size: 17px;
+   margin-top: 10px;
   }
-  .special-about-us .items{
-     height: 70%;
-     width: 100%;
-     margin-top: -60px;
-  }
+  
   .special-about-us .item{
-    float: left;
-    width: 33.33%;
     box-sizing: border-box;
     margin-bottom: 10px;
-    margin-top: 50px; ;
+    margin-top: 50px; 
     padding: 10px;
 
   }
   .special-about-us .item  i{
-    float: left;
-    font-size: 20px;
-     margin-left: -30px;
-     margin-right: 10px;
+     font-size: 20px;
+     margin-right: 20px;
+     margin-left: -50px;
   }
+  .special-about-us .item p{
+    width: 90%;
 
-
-
+  }
 
   /* Our-Pieces section*/
   .Our-Pieces{
@@ -407,7 +377,7 @@ transition-duration: 1s;
 
   /* Latest-News */
   .Latest-News{
-    height: 100vh;
+    height: 80vh;
     background-color: #f8f8f8;
 
   }
@@ -428,20 +398,19 @@ transition-duration: 1s;
   }
 
   .Latest-News .items{
-   height: 60%;
-   padding: 50px;
+    width: 100%;
+    padding: 50px;
     margin-top: 60px;
     margin-bottom: -150px;
+    display: flex;
+    justify-content: space-around;
  }
   .Latest-News .item{
-    float: left;
-    width: 30%;
     box-sizing: border-box;
     margin-bottom: 10px;
-    margin: 15px; 
-    padding: 30px;
+    padding: 20px;
     background-color: #ffff;
-
+    width: 30%;
  }
  .Latest-News .item .pdate{
   color: #AAA;
@@ -450,6 +419,7 @@ transition-duration: 1s;
   color: #686868;
   margin-bottom: 20px;
   margin-top: 5px;
+  width: 80%;
  }
   .Latest-News .item h5{
 font-size: 20px;
@@ -489,7 +459,7 @@ margin-bottom: 5px;
   
 /* footer */
 .footer{
-  height: 30%;
+  height: 50%;
   background-color: #151515;
   text-align: center;
   padding-top:90px;
@@ -497,11 +467,11 @@ margin-bottom: 5px;
 .footer p{
   color: #8888;
   font-size: 17px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .footer .icon{
   color: #ffff;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 .footer .icon i{
 background-color: #ce5c9f;
@@ -514,8 +484,6 @@ cursor: pointer;
 .footer .icon i:hover{
 background-color: #3c3072;
 transition-duration: 1s;
-
-
 }
 
 
@@ -523,78 +491,44 @@ transition-duration: 1s;
   /* header section */
 
   .header{
-      background-size:500px 900px;
+      background-size:500px 1000px;
       overflow: hidden;
-  }
-  .navbar{
-      text-align: center;
-      width: 100%;
-      height: 20%;
-      position: fixed;
-  }
-  .logo{
-      float: left;
-      width: 70%;
-  }
-  .links{
-
-    float: left;
-    height: -5%;
-    padding: 30px;
-     margin-top: -2px;
-     margin-bottom: -150px;
-     margin-left: -120px;
-    
+      height: 900px;
   }
 
-  .links li{
-      margin-right: -2px;
-      padding: -20px;
-  }
+
   .header-content {
     text-align: center;
-    margin-top: 15%;
     width: 100%;
-    height: 100%;
+    height: 120%;
     }
-    .header-content .container{
-      width: 100%;
-      padding: -80px;
-      margin-top: 50%;
- 
-    
-    }
+
     .header-content p{
-      margin-top: 10px;
+      margin-top: 2px;
       font-size: 22px;
       line-height: 1.86em;
+      width: 90%;
       
   }
   
   .header-content h1{
-      margin-top: 10px;
       font-size: 56px;
   }
-  .header-content .loader {
-    margin-left: 170px;
-  }
+
   /* review section */
   .review{
     height: 1100px;
-    width: 500px;
-    
+
   }
 
   .review div{
     text-align: center;
-    margin-left: -25px;
-    width: 90%;
 
    }
 
     /* Ourgoals section */
     .Ourgoals{
-      height: 1300px;
+      height: 1550px;
       padding: 50 0;
     }
   
@@ -626,12 +560,15 @@ transition-duration: 1s;
   .special-about-us{
     background-size:400px 1400px;
     height: 1300px;
-    padding: 50 0;
-
   }
-  .special-about-us .special{
-     padding-top: 0px;
+  .special-about-us .items{
+    justify-content: center;
+    padding-left: 10px;
   }
+  .special-about-us .items p{
+   width: 100%;
+  }
+  
   .special-about-us h3{
    font-size: 30px;
   }
@@ -641,19 +578,11 @@ transition-duration: 1s;
   .special-about-us h5{
    font-size: 20px;
   }
-  .special-about-us .items{
-     height: 60%;
-     width: 100%;
-     margin-top: -220px;
-  }
-  .special-about-us .item{
-    width: 100%;
-    box-sizing: border-box;
-    margin-bottom: 5px;
-    margin-top: 10px; ;
-  
-
-  }
+  .special-about-us .item  i{
+    font-size: 20px;
+    margin-right: 20px;
+    margin-left: 0px;
+ }
 
 
   /* Our-Pieces section*/
@@ -665,6 +594,7 @@ transition-duration: 1s;
     height: 10%;
     padding-top: 70px;    
     padding-bottom: -6px;
+    text-align: center;    
   }
   .Our-Pieces h3{
    font-size: 30px;
@@ -680,7 +610,6 @@ transition-duration: 1s;
   .Our-Pieces img{
     height:360px;
     width: 360px;
-    margin-left: -20px;
   }
   .Our-Pieces .button{
     padding-top: 60px;
@@ -688,7 +617,7 @@ transition-duration: 1s;
 
   /* Latest-News */
   .Latest-News{
-    height: 1250px;
+    height: 1200px;
     background-color: #f8f8f8;
 
   }
@@ -699,21 +628,17 @@ transition-duration: 1s;
   }
 
   .Latest-News .items{
-padding-bottom: 230px;
+    padding-bottom: 30px;
  }
   .Latest-News .item{
     width: 100%;
-    
+    margin: 5px;
  }
 
-  .button{
-    height: 20%;
-    padding-top: 50px;
-  }
 
 /* footer */
 .footer{
-  height: 40%;
+  height: 50%;
 }
 .footer p{
   font-size: 20px;
